finish first stage analysis

--- a/grid_search.ipynb
+++ b/grid_search.ipynb
@@ -109,7 +109,233 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
+   "id": "a3ef88fd-e3c3-43b2-a250-eff301dfd865",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parameter_space(save):\n",
+    "    quan_map30 = np.zeros((19, 19))\n",
+    "    topo_map30 = np.zeros((19, 19))\n",
+    "    quan_map50 = np.zeros((19, 19))\n",
+    "    topo_map50 = np.zeros((19, 19))\n",
+    "    quan_map70 = np.zeros((19, 19))\n",
+    "    topo_map70 = np.zeros((19, 19))\n",
+    "    quan_map90 = np.zeros((19, 19))\n",
+    "    topo_map90 = np.zeros((19, 19))\n",
+    "    \n",
+    "    for j in os.listdir(\"D:/SPHEREx_SOM/record/grid_search/all/\"):\n",
+    "        if \"check\" in j or \"diagram\" in j:\n",
+    "            continue\n",
+    "        file = \"D:/SPHEREx_SOM/record/grid_search/all/\" + j\n",
+    "        with open(file, \"rb\") as fh:\n",
+    "            record = pickle.load(fh)\n",
+    "            \n",
+    "        for i in record:\n",
+    "            if i[\"sigma\"] < 1:\n",
+    "                x_index = i[\"sigma\"] * 10 - 1\n",
+    "            elif i[\"sigma\"] >= 1:\n",
+    "                x_index = i[\"sigma\"] + 8\n",
+    "            if i[\"rate\"] < 1:\n",
+    "                y_index = i[\"rate\"] * 10 - 1\n",
+    "            elif i[\"rate\"] >= 1:\n",
+    "                y_index = i[\"rate\"] + 8\n",
+    "            if i[\"dim\"] == 30:\n",
+    "                topo_map30[int(x_index), int(y_index)] = i[\"topo_err\"]\n",
+    "                quan_map30[int(x_index), int(y_index)] = i[\"quan_err\"]\n",
+    "            elif i[\"dim\"] == 50:\n",
+    "                topo_map50[int(x_index), int(y_index)] = i[\"topo_err\"]\n",
+    "                quan_map50[int(x_index), int(y_index)] = i[\"quan_err\"]\n",
+    "            elif i[\"dim\"] == 70:\n",
+    "                topo_map70[int(x_index), int(y_index)] = i[\"topo_err\"]\n",
+    "                quan_map70[int(x_index), int(y_index)] = i[\"quan_err\"]\n",
+    "            elif i[\"dim\"] == 90:\n",
+    "                topo_map90[int(x_index), int(y_index)] = i[\"topo_err\"]\n",
+    "                quan_map90[int(x_index), int(y_index)] = i[\"quan_err\"]\n",
+    "            \n",
+    "    tick_i = [i + 0.5 for i in range(0, 19)]\n",
+    "    tick_f = [0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "    topo_maps = [topo_map30, topo_map50, topo_map70, topo_map90]\n",
+    "    quan_maps = [quan_map30, quan_map50, quan_map70, quan_map90]\n",
+    "    \n",
+    "    plt.close()\n",
+    "    plt.figure(figsize = (30, 20))\n",
+    "\n",
+    "    for i in range(1, 5):\n",
+    "        dim = (i * 2 + 1) * 10\n",
+    "        plt.subplot(220 + i)\n",
+    "        plt.hist(topo_maps[i - 1].reshape(-1), bins = 20)\n",
+    "        plt.xlabel(\"Topological Error\", fontsize=20)\n",
+    "        plt.ylabel(\"# of Glaxies\", fontsize=20)\n",
+    "    \n",
+    "    if save:\n",
+    "        plt.savefig(f\"D:/SPHEREx_SOM/record/grid_search/all/diagram/topo_err_dist.jpg\", bbox_inches = \"tight\")    \n",
+    "    plt.show()\n",
+    "\n",
+    "    plt.close()\n",
+    "    plt.figure(figsize = (30, 20))\n",
+    "    for i in range(1, 5):\n",
+    "        dim = (i * 2 + 1) * 10\n",
+    "        plt.subplot(220 + i)\n",
+    "        plt.hist(np.log10(quan_maps[i - 1]).reshape(-1), bins = 20)\n",
+    "        plt.xlabel(\"log(Quantization Error)\", fontsize=20)\n",
+    "        plt.ylabel(\"# of Glaxies\", fontsize=20)\n",
+    "        plt.yscale(\"log\")\n",
+    "        \n",
+    "    if save:\n",
+    "        plt.savefig(f\"D:/SPHEREx_SOM/record/grid_search/all/diagram/quan_err_dist.jpg\", bbox_inches = \"tight\")  \n",
+    "    plt.show()\n",
+    "    \n",
+    "    plt.close()\n",
+    "    plt.figure(figsize = (30, 20))\n",
+    "    for i in range(1, 5):\n",
+    "        dim = (i * 2 + 1) * 10\n",
+    "        plt.subplot(220 + i)\n",
+    "        plt.pcolor(topo_maps[i - 1], cmap = 'YlGn')\n",
+    "        plt.title(f\"Topological Error (Dim: {dim}X{dim} / Cut: both)\", fontsize=20)\n",
+    "        plt.xlabel(\"Rate\", fontsize=20)\n",
+    "        plt.ylabel(\"Sigma\", fontsize=20)\n",
+    "        plt.xticks(tick_i, tick_f, fontsize=15)\n",
+    "        plt.yticks(tick_i, tick_f, fontsize=15)\n",
+    "        plt.colorbar().ax.tick_params(labelsize=15)\n",
+    "\n",
+    "    if save:\n",
+    "        plt.savefig(f\"D:/SPHEREx_SOM/record/grid_search/all/diagram/topo_err_para_space.jpg\", bbox_inches = \"tight\")  \n",
+    "    plt.show()\n",
+    "    \n",
+    "    plt.close()\n",
+    "    plt.figure(figsize = (30, 20))\n",
+    "    for i in range(1, 5):\n",
+    "        dim = (i * 2 + 1) * 10\n",
+    "        plt.subplot(220 + i)\n",
+    "        plt.pcolor(np.log10(quan_maps[i - 1]), cmap = 'YlGn')\n",
+    "        plt.title(f\"Quantizationl Error (Dim: {dim}X{dim} / Cut: both)\", fontsize=20)\n",
+    "        plt.xlabel(\"Rate\", fontsize=20)\n",
+    "        plt.ylabel(\"Sigma\", fontsize=20)\n",
+    "        plt.xticks(tick_i, tick_f, fontsize=15)\n",
+    "        plt.yticks(tick_i, tick_f, fontsize=15)\n",
+    "        plt.colorbar().ax.tick_params(labelsize=15)\n",
+    "\n",
+    "    if save:\n",
+    "        plt.savefig(f\"D:/SPHEREx_SOM/record/grid_search/all/diagram/quan_err_para_space.jpg\", bbox_inches = \"tight\")  \n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "78f72a76-38ae-44dc-829b-e3e5e2e17047",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def visual_map(dim, sigma, rate, data, info_data, save = False):\n",
+    "    for j in os.listdir(\"D:/SPHEREx_SOM/record/grid_search/all/\"):\n",
+    "        if \"check\" in j or \"diagram\" in j:\n",
+    "            continue\n",
+    "        file = \"D:/SPHEREx_SOM/record/grid_search/all/\" + j\n",
+    "        with open(file, \"rb\") as fh:\n",
+    "            record = pickle.load(fh)\n",
+    "        for k in record:\n",
+    "            if k[\"dim\"] == dim and k[\"rate\"] == rate and k[\"sigma\"] == sigma:\n",
+    "                pass\n",
+    "            else:\n",
+    "                continue\n",
+    "            som = k[\"som\"]\n",
+    "            print(f\"Topological error: {som.topographic_error(data)}\")\n",
+    "            print(f\"Quantization error: {som.quantization_error(data)}\")\n",
+    "            if \"density\" in k:\n",
+    "                density_map = k[\"density\"]\n",
+    "                magnitude_map = k[\"magnitude\"]\n",
+    "                z_map = k[\"z\"]\n",
+    "                \n",
+    "                %matplotlib inline\n",
+    "                plt.close()\n",
+    "                plt.figure(figsize = (30, 20))\n",
+    "                plt.subplot(221)\n",
+    "                plt.pcolor(som.distance_map().T, cmap='YlGn')\n",
+    "                plt.colorbar()\n",
+    "                plt.title(\"Distance map (U-matrix)\")\n",
+    "            \n",
+    "                plt.subplot(222)\n",
+    "                plt.pcolor(density_map.T, cmap='YlGn')\n",
+    "                plt.colorbar()\n",
+    "                plt.title(\"Density Map\")\n",
+    "            \n",
+    "                plt.subplot(223)\n",
+    "                plt.pcolor(magnitude_map.T, cmap=\"plasma\" + \"_r\")\n",
+    "                plt.colorbar()\n",
+    "                plt.title(\"HSC I Magnitude Map\")\n",
+    "            \n",
+    "                plt.subplot(224)\n",
+    "                plt.pcolor(z_map.T, cmap=\"plasma\")\n",
+    "                plt.colorbar()\n",
+    "                plt.title(\"True Redshift Map\")\n",
+    "                if save:\n",
+    "                    plt.savefig(f\"D:/SPHEREx_SOM/record/grid_search/all/diagram/{dim}_{sigma}_{rate}.jpg\", bbox_inches = \"tight\")\n",
+    "                \n",
+    "                plt.show()\n",
+    "                continue\n",
+    "            else:\n",
+    "                pass\n",
+    "            \n",
+    "            density_map = np.zeros(dim ** 2).reshape(dim, dim)\n",
+    "            magnitude_map = np.zeros(dim ** 2).reshape(dim, dim)\n",
+    "            magnitude_map.fill(np.nan)\n",
+    "            z_map = np.zeros(dim ** 2).reshape(dim, dim)\n",
+    "            z_map.fill(np.nan)\n",
+    "            \n",
+    "            labels_map_1 = som.labels_map(data, [0] * len(data))\n",
+    "            labels_map_2 = som.labels_map(data, tuple(map(tuple, np.concatenate((np.expand_dims(info_data[\"HSC_i_MAG\"].values, axis = 1), np.expand_dims(info_data[\"z_true\"].values, axis = 1)), axis = -1))))\n",
+    "        \n",
+    "            for i in labels_map_1.keys():\n",
+    "                density_map[int(list(i)[0]), int(list(i)[1])] = labels_map_1[i][0]\n",
+    "            \n",
+    "            for i in labels_map_2.keys():\n",
+    "                properties = np.mean(np.array(list(labels_map_2[i].keys())), axis = 0)\n",
+    "                magnitude_map[int(list(i)[0]), int(list(i)[1])] = properties[0]\n",
+    "                z_map[int(list(i)[0]), int(list(i)[1])] = properties[1]\n",
+    "    \n",
+    "            %matplotlib inline\n",
+    "            plt.close()\n",
+    "            plt.figure(figsize = (30, 20))\n",
+    "            plt.subplot(221)\n",
+    "            plt.pcolor(som.distance_map().T, cmap='YlGn')\n",
+    "            plt.colorbar()\n",
+    "            plt.title(\"Distance map (U-matrix)\")\n",
+    "        \n",
+    "            plt.subplot(222)\n",
+    "            plt.pcolor(density_map.T, cmap='YlGn')\n",
+    "            plt.colorbar()\n",
+    "            plt.title(\"Density Map\")\n",
+    "        \n",
+    "            plt.subplot(223)\n",
+    "            plt.pcolor(magnitude_map.T, cmap=\"plasma\" + \"_r\")\n",
+    "            plt.colorbar()\n",
+    "            plt.title(\"HSC I Magnitude Map\")\n",
+    "        \n",
+    "            plt.subplot(224)\n",
+    "            plt.pcolor(z_map.T, cmap=\"plasma\")\n",
+    "            plt.colorbar()\n",
+    "            plt.title(\"True Redshift Map\")\n",
+    "            if save:\n",
+    "                plt.savefig(f\"D:/SPHEREx_SOM/record/grid_search/all/diagram/{dim}_{sigma}_{rate}.jpg\", bbox_inches = \"tight\")\n",
+    "            \n",
+    "            plt.show()\n",
+    "        \n",
+    "            k[\"density\"] = density_map\n",
+    "            k[\"magnitude\"] = magnitude_map\n",
+    "            k[\"z\"] = z_map\n",
+    "\n",
+    "            try:\n",
+    "                with open(file, 'wb') as handle:\n",
+    "                    pickle.dump(record, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
+    "            except KeyboardInterrupt:\n",
+    "                print('KeyboardInterrupt caught, data saved.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "f6a0d781-52ff-4381-b4a5-fd248a9e3286",
    "metadata": {},
    "outputs": [
@@ -153,7 +379,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File: D:/SPHEREx_SOM/record/grid_search/all/total_low_sigma_low_rate.pkl, progress: 46.5%, param: [50, 0.9, 0.6]]\r"
+      "File: D:/SPHEREx_SOM/record/grid_search/all/total_low_sigma_low_rate.pkl, progress: 100.0%, param: [90, 1.0, 1.0]\r"
      ]
     }
    ],
@@ -169,6 +395,28 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "13a095e9-f99d-4af1-9159-455d7d9c5f18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parameter_space(save = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5cb98e2b-689b-4ce9-b4e6-c86b44023e9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(1, 11):\n",
+    "    visual_map(dim = 50, sigma = i / 10, rate = 0.6, data = data, info_data = df_L3_info, save = True)\n",
+    "print(\"Finishe the iteration\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c28d51bf-59b8-4a2c-be76-307522a7938e",
    "metadata": {},
    "outputs": [],
    "source": []
