no meaningful change just copy code from

--- a/grid_search_band_cut.ipynb
+++ b/grid_search_band_cut.ipynb
@@ -102,9 +102,9 @@
     "        for i in record:\n",
     "            n += 1\n",
     "            if \"som\" not in i:\n",
-    "                som = MiniSom(i[\"dim\"], i[\"dim\"], data.shape[1], sigma = i[\"sigma\"], learning_rate = i[\"rate\"])\n",
+    "                som = MiniSom(i[\"dim\"], i[\"dim\"], data.shape[1], sigma = i[\"sigma\"], learning_rate = i[\"rate\"], distance = i[\"distance\"])\n",
     "                som.random_weights_init(data)\n",
-    "                som.train(data = data, num_iteration = 1, use_epochs = True) \n",
+    "                som.train(data, err, num_iteration = iteration, use_epochs = True) \n",
     "                i[\"topo_err\"] = som.topographic_error(data)\n",
     "                i[\"quan_err\"] = som.quantization_error(data)\n",
     "                i[\"som\"] = som\n",
